[Feature] Add some flags for OpenMP to optimize its use when used as a backend for eigen
Original author is J. Lindgren

Tracker Reference: [CORE-966](https://jira.mensiatech.com/browse/CORE-966)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ ENDIF()
 OPTION(OV_DISPLAY_ERROR_LOCATION ON)
 OPTION(PUBLISH_DOC_ASSETS "Publish plugin documentation assets" ON)
 
-# If OpenMP is available, it will allow Eigen to use multiple cores in matrix math.
+# If OpenMP is available, using it will allow Eigen to use multiple cores in matrix math.
 IF(NOT(APPLE))
 	INCLUDE("FindOpenMP")
 	IF(OPENMP_FOUND)
@@ -52,6 +52,10 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 IF(WIN32)
 	ADD_DEFINITIONS("-DNOMINMAX -DBOOST_ALL_NO_LIB")
+	# The following is needed to keep OpenMP from hogging all the cores. Note that this works only for VS2013+. On VS2010, it may be better to disable OpenMP.
+	SET(OV_OMP_WAIT_POLICY "PASSIVE")
+	# Disable /MP if you don't like VS using all the cores for compilation
+	
 	# Switch /arch:SSE2 enables vectorization. Remove if your CPU/compiler doesn't support it.
 	SET(OV_EIGEN_FLAGS "/arch:SSE2")
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4355 /MP ${OV_EIGEN_FLAGS}")
