[Refactor] User defined paths for visual studio builds
Add --vsproject and --vsbuild options to windows-build.cmd, to set the generator to visual instead of ninja and
create .sln file (--vsbuild will also build using that file)
Transform windows-generate-vs-project*.cmp into alias of windows-build.cmd --vsproject
Simplify AddCertivibeComponent.cmake so that it plays nicer with the projects depending on it

Tracker Reference: [CORE-972](https://jira.mensiatech.com/browse/CORE-972)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -255,7 +255,7 @@ ENDIF()
 
 # add the scripts to the project so IDEs using the CMake file are aware of them
 FILE(GLOB_RECURSE script_files scripts/*.cmd scripts/*.sh scripts/*.nsi scripts/*.cmake)
-INSTALL(FILES scripts/AddCertivibeComponents.cmake DESTINATION ${DIST_DATADIR})
+CONFIGURE_FILE(scripts/AddCertivibeComponents.cmake ${DIST_DATADIR} COPYONLY)
 ADD_CUSTOM_TARGET(openvibe-scripts SOURCES ${script_files})
 
 # Enable/Disable unit test
