[Build] Use git tag in order to infer the current version of software.
If current commit is tagged, use tag as it is, else, use last tag and change patch version to "99"
Add build number, written by hand in a .build file, should be set by
Jenkins

+ Utilities.cmake: cmake module that implements functions set_version and  debug_message

* SetProjectVersion: change ov_set_project_version to make it configure versions specific to OpenViBE

 Add installation manifest file ".install" to root install directory. This file lists version, commit hash, date and branch on the one software was built.

* resource-file.rc-base: Add token "COPYRIGHT_DATE" in order to avoid to
 have to change date in LegalCopyright every year. Add Build number to
 version

Tracker Reference: [Jira CORE-952](https://jira.mensiatech.com/browse/CORE-952)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.4)
 cmake_policy(SET CMP0026 OLD)
 cmake_policy(SET CMP0042 OLD)
 cmake_policy(SET CMP0043 OLD)
@@ -6,11 +6,12 @@ cmake_policy(SET CMP0045 OLD)
 cmake_policy(SET CMP0048 OLD)
 
 PROJECT(OpenVIBE)
-
-SET(OV_GLOBAL_VERSION_MAJOR 0)
-SET(OV_GLOBAL_VERSION_MINOR 2)
-SET(OV_GLOBAL_VERSION_PATCH 99)
-SET(OV_GLOBAL_VERSION_STRING "${OV_GLOBAL_VERSION_MAJOR}.${OV_GLOBAL_VERSION_MINOR}.${OV_GLOBAL_VERSION_PATCH}")
+SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules")
+INCLUDE("Utilities")
+INCLUDE("SetProjectVersion")
+set_version()
+OV_SET_PROJECT_VERSION()
+MESSAGE(STATUS "BUILDING VERSION OpenViBE SDK: ${PROJECT_VERSION} Branch : ${OV_PROJECT_BRANCH}~${OV_PROJECT_COMMITHASH}")
 
 # Default is to build to dist/. If you wish a custom install, set your own MAKE_INSTALL_PREFIX when you call CMake. Safest to do under a fakeroot.
 MESSAGE(STATUS "Appending compilation flags...")
@@ -20,6 +21,7 @@ SET(OV_CUSTOM_DEPENDENCIES_PATH "${CMAKE_SOURCE_DIR}/dependencies" CACHE STRING 
 SET(OV_SOURCE_DEPENDENCIES_PATH "${CMAKE_SOURCE_DIR}/dependencies-source")
 
 SET(BRAND_NAME "OpenViBE" CACHE STRING "Brand with which titles and documentation will be prefixed")
+string(TIMESTAMP COPYRIGHT_DATE "2012-%Y")
 IF(BRAND_NAME STREQUAL "NeuroRT")
 	SET(COMPANY_NAME "Mensia Technologies SA")
 ELSE()
@@ -36,7 +38,6 @@ IF(NOT(APPLE))
 		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 	ENDIF(OPENMP_FOUND)
 ENDIF()
-
 
 ADD_DEFINITIONS("-DOV_CONFIG_SUBDIR=\"${OV_CONFIG_SUBDIR}\"")
 ADD_DEFINITIONS("-DOV_PROJECT_NAME=\"${PROJECT_NAME}\"")
@@ -85,7 +86,6 @@ IF(OV_PACKAGE)
 ENDIF()
 
 SET(DOCUMENTATION_TEMP_DIRECTORY "${CMAKE_INSTALL_PREFIX}/doc-tmp")
-
 
 # Print the used compilation parameters (for transparency)
 GET_DIRECTORY_PROPERTY(TMP_DEFINITIONS COMPILE_DEFINITIONS)
@@ -145,8 +145,6 @@ SET(OV_LAUNCHER_SOURCE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules/launchers")
 
 # By setting SKIP[_FOLDER]* you can skip a subtree (example: SKIP_A_B_C skips folder a/b/c and all its subfolders if any)
 # Skip building documentation
-SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules")
-
 # a list of all project which will be filled by the directory traversal. This is needed to generate the documentation.
 SET_PROPERTY(GLOBAL PROPERTY OV_PROP_CURRENT_PROJECTS "")
 SET_PROPERTY(GLOBAL PROPERTY OV_PROP_CURRENT_PROJECTS_BUILD_DIR "")
@@ -165,7 +163,6 @@ INCLUDE("OvAddProjects")
 INCLUDE("OvInstallLaunchScript")
 INCLUDE("OvLinkBoostLib")
 INCLUDE("OvDelayLoad")
-INCLUDE("SetProjectVersion")
 
 # Setup knowledge of GNU-style install path variables
 INCLUDE("GNUInstallDirs")
@@ -177,9 +174,6 @@ ADD_DEFINITIONS(-DOV_CMAKE_PATH_ROOT="${CMAKE_INSTALL_PREFIX}")
 ADD_DEFINITIONS(-DOV_CMAKE_PATH_BIN="${CMAKE_INSTALL_FULL_BINDIR}")
 ADD_DEFINITIONS(-DOV_CMAKE_PATH_LIB="${CMAKE_INSTALL_FULL_LIBDIR}")
 ADD_DEFINITIONS(-DOV_CMAKE_PATH_DATA="${CMAKE_INSTALL_FULL_DATADIR}/openvibe")
-
-# Sets the PROJECT_VERSION variable to something, depending on overriding OvSetProjectVersion.cmake files
-OV_SET_PROJECT_VERSION()
 
 SET(DIST_ROOT ${CMAKE_INSTALL_PREFIX})
 IF(OV_PACKAGE)
@@ -197,6 +191,7 @@ IF(OV_PACKAGE)
 	SET(CPACK_PACKAGE_VERSION_MAJOR ${OV_GLOBAL_VERSION_MAJOR})
 	SET(CPACK_PACKAGE_VERSION_MINOR ${OV_GLOBAL_VERSION_MINOR})
 	SET(CPACK_PACKAGE_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
+	SET(CPACK_PACKAGE_VERSION_BUILD ${OV_GLOBAL_VERSION_BUILD})
 
 	if(UNIX)
 		execute_process(
@@ -241,6 +236,8 @@ ENDIF()
 IF(NOT(SKIP_APPLICATIONS))
     ADD_SUBDIRECTORY("applications/")
 ENDIF()
+
+INSTALL(FILES "${CMAKE_BINARY_DIR}/.install" DESTINATION ${CMAKE_INSTALL_PREFIX})
 
 
 OPTION(BUILD_TESTING "Include and build unit tests" ON)
