[Kernel] Make local plugin symbol loading optional
This keeps the symbol loading in the original (Global) version by default and switches to Local for NeuroRT builds.

Tracker Reference: [CORE-903](https://jira.mensiatech.com/browse/CORE-903)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,6 +132,9 @@ ENDIF()
 #################################################################
 string(TOLOWER ${BRAND_NAME} LOWER_BRAND_NAME)
 ADD_DEFINITIONS(-DBRAND_NAME="${BRAND_NAME}")
+if(${BRAND_NAME} STREQUAL "NeuroRT")
+	ADD_DEFINITIONS(-DOV_LOCAL_SYMBOLS)
+endif()
 
 IF(OV_DISPLAY_ERROR_LOCATION)
 	ADD_DEFINITIONS(-DOV_DISPLAY_ERROR_LOCATION)
