[Build] Multi Configuration Builds for Visual Studio
SDK Build is now buildtype agnostic until compile step (with --vsproject option)

Tracker Reference: [CORE-1006](https://jira.mensiatech.com/browse/CORE-1006)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,14 +72,44 @@ ELSE()
 	MESSAGE(WARNING "Warning: unknown platform")
 ENDIF()
 
-IF(NOT CMAKE_BUILD_TYPE)
-	MESSAGE(STATUS "Setting default build type to Release")
-	SET(CMAKE_BUILD_TYPE "Release")
-ENDIF()
-
 IF(NOT CMAKE_INSTALL_PREFIX)
 	SET(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/../openvibe-sdk-build/dist-${CMAKE_BUILD_TYPE}")
-ENDIF(NOT CMAKE_INSTALL_PREFIX)
+ENDIF()
+
+# Setup knowledge of GNU-style install path variables
+INCLUDE("GNUInstallDirs")
+
+if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_GENERATOR MATCHES "Visual Studio*")
+	MESSAGE(STATUS "Setting default build type to Release")
+	SET(CMAKE_BUILD_TYPE "Release")
+elseif(CMAKE_GENERATOR MATCHES "Visual Studio*")
+	set( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/bin" )
+	set( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/lib" )
+	# set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/archive" )
+	foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
+		string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
+		set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_INSTALL_PREFIX}/${OUTPUTCONFIG}/bin" )
+		set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_INSTALL_PREFIX}/${OUTPUTCONFIG}/lib" )
+		# set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_INSTALL_PREFIX}/${OUTPUTCONFIG}/archive" )
+		string(CONCAT DIST_ROOT ${DIST_ROOT} $<$<CONFIG:${OUTPUTCONFIG}>:${CMAKE_INSTALL_PREFIX}/${OUTPUTCONFIG}>)
+	endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
+	set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS "OV_CMAKE_PATH_ROOT=\"${DIST_ROOT}\"")
+	set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS "OV_CMAKE_PATH_BIN=\"${DIST_ROOT}/bin\"")
+	set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS "OV_CMAKE_PATH_LIB=\"${DIST_ROOT}/lib\"")
+	set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS "OV_CMAKE_PATH_DATA=\"${DIST_ROOT}/share/openvibe\"")
+	set(DIST_BINDIR ${DIST_ROOT}/bin)
+	set(DIST_LIBDIR ${DIST_ROOT}/lib)
+	set(DIST_INCLUDEDIR ${DIST_ROOT}/include)
+	set(DIST_DATADIR ${DIST_ROOT}/share)
+	set(DIST_DOCDIR ${DIST_ROOT}/doc)
+else()
+	# Add directories that OpenViBE will use to look for its components runtime, unless overridden by environment variables in the launch scripts.
+	# These defines should only be used in "openvibe/ov_directories.h".
+	ADD_DEFINITIONS(-DOV_CMAKE_PATH_ROOT="${CMAKE_INSTALL_PREFIX}")
+	ADD_DEFINITIONS(-DOV_CMAKE_PATH_BIN="${CMAKE_INSTALL_PREFIX}/bin")
+	ADD_DEFINITIONS(-DOV_CMAKE_PATH_LIB="${CMAKE_INSTALL_PREFIX}/lib")
+	ADD_DEFINITIONS(-DOV_CMAKE_PATH_DATA="${CMAKE_INSTALL_PREFIX}/share/openvibe")
+endif()
 
 IF(OV_PACKAGE)
   SET(CMAKE_INSTALL_PREFIX .)
@@ -119,7 +149,6 @@ FUNCTION(SET_BUILD_PLATFORM)
 		ADD_DEFINITIONS(-DTARGET_OS_Linux)
 		ADD_DEFINITIONS(-DTARGET_COMPILER_GCC)
 	ENDIF()
-
 ENDFUNCTION()
 
 # Custom cmakelist can be used to overwrite the default compilation & packaging parameters
@@ -153,6 +182,7 @@ SET_PROPERTY(GLOBAL PROPERTY OV_PROP_CURRENT_PROJECTS_BUILD_DIR "")
 SET(OV_BASE_DIR ${CMAKE_SOURCE_DIR})
 SET(OV_BASE_BIN_DIR ${CMAKE_BINARY_DIR})
 SET(OV_LIBRARY_DIR  ${CMAKE_BINARY_DIR}/lib)
+
 # needed for making visual studio projects when this script is called without CMAKE_BUILD_TYPE
 SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS_DEBUG "TARGET_BUILDTYPE_Debug")
 SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS_RELEASE "TARGET_BUILDTYPE_Release")
@@ -164,19 +194,16 @@ INCLUDE("OvInstallLaunchScript")
 INCLUDE("OvLinkBoostLib")
 INCLUDE("OvDelayLoad")
 
-# Setup knowledge of GNU-style install path variables
-INCLUDE("GNUInstallDirs")
+
 SET(CMAKE_INSTALL_FULL_DOCDIR "${CMAKE_INSTALL_FULL_BINDIR}/../doc/html")
 
-# Add directories that OpenViBE will use to look for its components runtime, unless overridden by environment variables in the launch scripts.
-# These defines should only be used in "openvibe/ov_directories.h".
-ADD_DEFINITIONS(-DOV_CMAKE_PATH_ROOT="${CMAKE_INSTALL_PREFIX}")
-ADD_DEFINITIONS(-DOV_CMAKE_PATH_BIN="${CMAKE_INSTALL_FULL_BINDIR}")
-ADD_DEFINITIONS(-DOV_CMAKE_PATH_LIB="${CMAKE_INSTALL_FULL_LIBDIR}")
-ADD_DEFINITIONS(-DOV_CMAKE_PATH_DATA="${CMAKE_INSTALL_FULL_DATADIR}/openvibe")
-
 SET(DIST_ROOT ${CMAKE_INSTALL_PREFIX})
+
+# Sets the PROJECT_VERSION variable to something, depending on overriding OvSetProjectVersion.cmake files
+OV_SET_PROJECT_VERSION()
+
 IF(OV_PACKAGE)
+	SET(DIST_ROOT ${CMAKE_INSTALL_PREFIX})
 	SET(DIST_BINDIR ${CMAKE_INSTALL_BINDIR})
 	SET(DIST_LIBDIR ${CMAKE_INSTALL_LIBDIR})
 	SET(DIST_INCLUDEDIR ${CMAKE_INSTALL_INCLUDEDIR})
@@ -201,7 +228,8 @@ IF(OV_PACKAGE)
 
 	SET(CPACK_PACKAGE_NAME "OpenViBE-${CMAKE_BUILD_TYPE}")
 	INCLUDE(CPack)
-ELSE()
+ELSEIF(NOT CMAKE_GENERATOR MATCHES "Visual Studio*")
+	SET(DIST_ROOT ${CMAKE_INSTALL_PREFIX})
 	SET(DIST_BINDIR ${CMAKE_INSTALL_FULL_BINDIR})
 	SET(DIST_LIBDIR ${CMAKE_INSTALL_FULL_LIBDIR})
 	SET(DIST_INCLUDEDIR ${CMAKE_INSTALL_FULL_INCLUDEDIR})
