[Build] Fix missing doc-tmp folder
Tracker Reference: [CORE-1006](https://jira.mensiatech.com/browse/CORE-1006)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,7 @@ elseif(CMAKE_GENERATOR MATCHES "Visual Studio*")
 	set(DIST_INCLUDEDIR ${DIST_ROOT}/include)
 	set(DIST_DATADIR ${DIST_ROOT}/share)
 	set(DIST_DOCDIR ${DIST_ROOT}/doc)
+	SET(DIST_DOCTMP ${DIST_ROOT}/doc-tmp)
 	# Also install it on the base dir for convenience
 	INSTALL(FILES scripts/AddOpenViBESDKComponents.cmake DESTINATION ${CMAKE_INSTALL_PREFIX}/share)
 endif()
@@ -113,13 +114,12 @@ if(CMAKE_BUILD_TYPE)
 	ADD_DEFINITIONS(-DOV_CMAKE_PATH_BIN="${CMAKE_INSTALL_PREFIX}/bin")
 	ADD_DEFINITIONS(-DOV_CMAKE_PATH_LIB="${CMAKE_INSTALL_PREFIX}/lib")
 	ADD_DEFINITIONS(-DOV_CMAKE_PATH_DATA="${CMAKE_INSTALL_PREFIX}/share/openvibe")
+
 endif()
 
 IF(OV_PACKAGE)
   SET(CMAKE_INSTALL_PREFIX .)
 ENDIF()
-
-SET(DOCUMENTATION_TEMP_DIRECTORY "${CMAKE_INSTALL_PREFIX}/doc-tmp")
 
 # Print the used compilation parameters (for transparency)
 GET_DIRECTORY_PROPERTY(TMP_DEFINITIONS COMPILE_DEFINITIONS)
@@ -212,7 +212,8 @@ IF(OV_PACKAGE)
 	SET(DIST_LIBDIR ${CMAKE_INSTALL_LIBDIR})
 	SET(DIST_INCLUDEDIR ${CMAKE_INSTALL_INCLUDEDIR})
 	SET(DIST_DATADIR ${CMAKE_INSTALL_DATADIR})
-	SET(DIST_DOCDIR ${CMAKE_INSTALL_BINDIR}/../doc)
+	SET(DIST_DOCDIR ${DIST_ROOT}/doc)
+	SET(DIST_DOCTMP ${DIST_ROOT}/doc-tmp)
 	SET(CPACK_GENERATOR "ZIP")
 	SET(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
 	SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${BRAND_NAME})
@@ -238,7 +239,8 @@ ELSEIF(NOT CMAKE_GENERATOR MATCHES "Visual Studio*")
 	SET(DIST_LIBDIR ${CMAKE_INSTALL_FULL_LIBDIR})
 	SET(DIST_INCLUDEDIR ${CMAKE_INSTALL_FULL_INCLUDEDIR})
 	SET(DIST_DATADIR ${CMAKE_INSTALL_FULL_DATADIR})
-	SET(DIST_DOCDIR ${CMAKE_INSTALL_FULL_BINDIR}/../doc)
+	SET(DIST_DOCDIR ${DIST_ROOT}/doc)
+	SET(DIST_DOCTMP ${DIST_ROOT}/doc-tmp)
 ENDIF()
 
 # Traverse these directories and build their components
