[Plugins & Module & Tests] OV CSV: improve performance of the parsing
[CORE-1005](https://jira.mensiatech.com/browse/CORE-1005)

--- a/modules/csv/CMakeLists.txt
+++ b/modules/csv/CMakeLists.txt
@@ -25,6 +25,8 @@ IF(UNIX)
 	SET_TARGET_PROPERTIES(${PROJECT_NAME}-static PROPERTIES COMPILE_FLAGS "-fPIC")
 ENDIF(UNIX)
 
+INCLUDE("FindThirdPartyBoost")
+
 # ---------------------------------
 # Target macros
 # Defines target operating system
