[Scripts] Dependencies folders depending of the platform target
[CORE-1030](https://jira.mensiatech.com/browse/CORE-1030)
[CORE-1029](https://jira.mensiatech.com/browse/CORE-1029)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,18 @@ MESSAGE(STATUS "BUILDING VERSION OpenViBE SDK: ${PROJECT_VERSION} Branch : ${OV_
 MESSAGE(STATUS "Appending compilation flags...")
 
 SET(OV_CONFIG_SUBDIR "${PROJECT_NAME}" CACHE STRING "Subdirectory under user directory when configuration and logs will be saved")
-SET(OV_CUSTOM_DEPENDENCIES_PATH "${CMAKE_SOURCE_DIR}/dependencies" CACHE STRING "Dependency directory")
+
+IF(NOT DEFINED OV_CUSTOM_DEPENDENCIES_PATH)
+	IF("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
+		SET(OV_DEPENDENCIES_PLATFORM_FOLDER_NAME "dependencies_x64")
+	ELSEIF("${CMAKE_SIZEOF_VOID_P}" EQUAL "4")
+		SET(OV_DEPENDENCIES_PLATFORM_FOLDER_NAME "dependencies_x86")
+	ELSE()
+		SET(OV_DEPENDENCIES_PLATFORM_FOLDER_NAME "dependencies")
+	ENDIF()
+ENDIF()
+
+SET(OV_CUSTOM_DEPENDENCIES_PATH "${CMAKE_SOURCE_DIR}/${OV_DEPENDENCIES_PLATFORM_FOLDER_NAME}" CACHE STRING "Dependency directory")
 SET(OV_SOURCE_DEPENDENCIES_PATH "${CMAKE_SOURCE_DIR}/dependencies-source")
 
 SET(BRAND_NAME "OpenViBE" CACHE STRING "Brand with which titles and documentation will be prefixed")
