[Plugin] Fix Unicode handling in the CSP Trainer plugin
Also remove disabled debugging code

[CORE-1065](https://jira.mensiatech.com/browse/CORE-1065)

--- a/modules/xml/CMakeLists.txt
+++ b/modules/xml/CMakeLists.txt
@@ -26,6 +26,7 @@ IF(UNIX)
 ENDIF(UNIX)
 
 INCLUDE("FindOpenViBECommon")
+INCLUDE("FindOpenViBEModuleFS")
 INCLUDE("FindThirdPartyBoost")
 INCLUDE("FindThirdPartyExpat")
 
