--- a/unit-test/openvibe-module-xml/CMakeLists.txt
+++ b/unit-test/openvibe-module-xml/CMakeLists.txt
@@ -19,54 +19,29 @@
 # If not, see <http://www.gnu.org/licenses/>.
 #######################################################################
 
-PROJECT(openvibe-module-xml-test)
+FUNCTION(SETUP_TEST)
+	SET_BUILD_PLATFORM()
 
-# ---------------------------------
-# Target macros
-# Defines target operating system
-# Defines target architecture
-# Defines target compiler
-# ---------------------------------
-SET_BUILD_PLATFORM()
+	INCLUDE("FindOpenViBE")
+	INCLUDE("FindOpenViBECommon")
+	INCLUDE("FindOpenViBEModuleXML")
+	INCLUDE("FindOpenViBEModuleFS")
+	INCLUDE("FindThirdPartyBoost")
+	INCLUDE("FindThirdPartyBoost_FileSystem")
 
-# ----------------------
-# Configure test target
-# ----------------------
+	TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GTEST_BOTH_LIBRARIES})
 
-# Test that needs to called with parameters
-SET(TEST_WITH_PARAM
-  uoXMLWriterTest.cpp
-  uoXMLReaderTest.cpp
-)
+	# Add test with parameter to driver
+	ADD_DEFINITIONS("-DDATA_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}/data\"")
+	ADD_DEFINITIONS("-DTEMP_DIR=\"${OVT_TEST_TEMPORARY_DIR}\"")
+ENDFUNCTION()
 
-# Test that needs to called without parameters
-SET(TEST_NO_PARAM
-)
+PROJECT(openvibe-module-xml-reader-test)
+ADD_EXECUTABLE(${PROJECT_NAME} uoXMLReaderTest.cpp)
+SETUP_TEST()
+ADD_TEST(NAME uoXMLReaderTest COMMAND ${PROJECT_NAME})
 
-# Create test sources list
-# This macro auto-generate ${PROJECT_NAME}.cpp
-# in the build tree. ${PROJECT_NAME}.cpp is 
-# the test driver called by ctest to run 
-# the different tests added to this target.
-CREATE_TEST_SOURCELIST (Tests
-	${PROJECT_NAME}.cpp
-	${TEST_WITH_PARAM}
-	${TEST_NO_PARAM}
-)
-
-ADD_EXECUTABLE(${PROJECT_NAME} ${Tests})
-INCLUDE("FindOpenViBE")
-INCLUDE("FindOpenViBECommon")
-INCLUDE("FindOpenViBEModuleXML")
-SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${OVT_UNIT_TESTS_FOLDER})
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OVT_UNIT_TOOLKIT_LIB} ${OV_MODULE_XML})
-
-# Add test without parameter to driver 
-FOREACH(test ${TEST_NO_PARAM})
-	GET_FILENAME_COMPONENT(TName ${test} NAME_WE)
-	ADD_TEST(NAME ${TName} COMMAND ${PROJECT_NAME} ${TName})
-ENDFOREACH()
-
-# Add test with parameter to driver
-ADD_TEST(NAME uoXMLWriterTest COMMAND ${PROJECT_NAME} uoXMLWriterTest "${CMAKE_CURRENT_SOURCE_DIR}/data/" "${OVT_TEST_TEMPORARY_DIR}")
-ADD_TEST(NAME uoXMLReaderTest COMMAND ${PROJECT_NAME} uoXMLReaderTest "${CMAKE_CURRENT_SOURCE_DIR}/data/")
+PROJECT(openvibe-module-xml-writer-test)
+ADD_EXECUTABLE(${PROJECT_NAME} uoXMLWriterTest.cpp)
+SETUP_TEST()
+ADD_TEST(NAME uoXMLWriterTest COMMAND ${PROJECT_NAME})
