[Build] Remove SVN specific instructions
Tracker Reference: [CORE-1006](https://jira.mensiatech.com/browse/CORE-1006)

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -70,7 +70,7 @@ INSTALL(TARGETS ${PROJECT_NAME}
 	LIBRARY DESTINATION ${DIST_LIBDIR}
 	ARCHIVE DESTINATION ${DIST_LIBDIR})
 
-INSTALL(DIRECTORY share/ DESTINATION ${DIST_DATADIR}/openvibe/kernel   PATTERN ".svn" EXCLUDE PATTERN "*-base" EXCLUDE)
+INSTALL(DIRECTORY share/ DESTINATION ${DIST_DATADIR}/openvibe/kernel PATTERN "*-base" EXCLUDE)
 
 # -----------------------------
 # Install and configure .conf
