--- a/plugins/processing/classification/CMakeLists.txt
+++ b/plugins/processing/classification/CMakeLists.txt
@@ -38,4 +38,4 @@ INSTALL(TARGETS ${PROJECT_NAME}
 	LIBRARY DESTINATION ${DIST_LIBDIR}
 	ARCHIVE DESTINATION ${DIST_LIBDIR})
 
-INSTALL(DIRECTORY box-tutorials/ DESTINATION ${DIST_DATADIR}/openvibe/scenarios/box-tutorials   PATTERN ".svn" EXCLUDE)
+INSTALL(DIRECTORY box-tutorials/ DESTINATION ${DIST_DATADIR}/openvibe/scenarios/box-tutorials)
