--- a/plugins/processing/streaming/CMakeLists.txt
+++ b/plugins/processing/streaming/CMakeLists.txt
@@ -34,4 +34,4 @@ INSTALL(TARGETS ${PROJECT_NAME}
 	LIBRARY DESTINATION ${DIST_LIBDIR}
 	ARCHIVE DESTINATION ${DIST_LIBDIR})
 
-INSTALL(DIRECTORY box-tutorials  DESTINATION ${DIST_DATADIR}/openvibe/scenarios/   PATTERN ".svn" EXCLUDE)
+INSTALL(DIRECTORY box-tutorials DESTINATION ${DIST_DATADIR}/openvibe/scenarios/)
