--- a/toolkit/CMakeLists.txt
+++ b/toolkit/CMakeLists.txt
@@ -74,6 +74,6 @@ INSTALL(TARGETS ${PROJECT_NAME}
 	LIBRARY DESTINATION ${DIST_LIBDIR}
 	ARCHIVE DESTINATION ${DIST_LIBDIR})
 
-INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ ${CMAKE_CURRENT_BINARY_DIR}/include/   DESTINATION  ${DIST_INCLUDEDIR} FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE)
-INSTALL(DIRECTORY share/ DESTINATION ${DIST_DATADIR}/openvibe/toolkit PATTERN ".svn" EXCLUDE PATTERN "*-base" EXCLUDE)
+INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ ${CMAKE_CURRENT_BINARY_DIR}/include/   DESTINATION  ${DIST_INCLUDEDIR} FILES_MATCHING PATTERN "*.h")
+INSTALL(DIRECTORY share/ DESTINATION ${DIST_DATADIR}/openvibe/toolkit PATTERN "*-base" EXCLUDE)
 
