[Module] Fix opening files in non-ASCII paths in the XML module
Update unit tests to test Unicode paths

[CORE-1065](https://jira.mensiatech.com/browse/CORE-1065)

--- a/modules/fs/CMakeLists.txt
+++ b/modules/fs/CMakeLists.txt
@@ -22,6 +22,10 @@ SET_TARGET_PROPERTIES(${PROJECT_NAME}-static PROPERTIES
 	SOVERSION ${PROJECT_VERSION_MAJOR}
 	COMPILE_FLAGS "-DFS_Static -DFS_Exports")
 
+IF(UNIX)
+	SET_TARGET_PROPERTIES(${PROJECT_NAME}-static PROPERTIES COMPILE_FLAGS "-fPIC")
+ENDIF()
+
 INCLUDE("FindOpenViBECommon")
 INCLUDE("FindThirdPartyBoost")
 INCLUDE("FindThirdPartyBoost_FileSystem")
