--- a/toolkit/CMakeLists.txt
+++ b/toolkit/CMakeLists.txt
@@ -57,6 +57,8 @@ INCLUDE("FindOpenViBECommon")
 INCLUDE("FindOpenViBEModuleEBML")
 INCLUDE("FindOpenViBEModuleXML")
 INCLUDE("FindOpenViBEModuleSystem")
+INCLUDE("FindOpenViBEModuleFS")
+INCLUDE("FindThirdPartyBoost_FileSystem")
 
 # ---------------------------------
 # Target macros
