[Scripts] Windows Dependencies: minor improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,10 +20,14 @@ MESSAGE(STATUS "Appending compilation flags...")
 SET(OV_CONFIG_SUBDIR "${PROJECT_NAME}" CACHE STRING "Subdirectory under user directory when configuration and logs will be saved")
 
 IF(NOT DEFINED OV_CUSTOM_DEPENDENCIES_PATH)
-	IF("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
-		SET(OV_DEPENDENCIES_PLATFORM_FOLDER_NAME "dependencies_x64")
-	ELSEIF("${CMAKE_SIZEOF_VOID_P}" EQUAL "4")
-		SET(OV_DEPENDENCIES_PLATFORM_FOLDER_NAME "dependencies_x86")
+	IF(WIN32)
+		IF("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
+			SET(OV_DEPENDENCIES_PLATFORM_FOLDER_NAME "dependencies_x64")
+		ELSEIF("${CMAKE_SIZEOF_VOID_P}" EQUAL "4")
+			SET(OV_DEPENDENCIES_PLATFORM_FOLDER_NAME "dependencies")
+		ELSE()
+			SET(OV_DEPENDENCIES_PLATFORM_FOLDER_NAME "dependencies")
+		ENDIF()
 	ELSE()
 		SET(OV_DEPENDENCIES_PLATFORM_FOLDER_NAME "dependencies")
 	ENDIF()
